# file-rewriter

./: .headache.dirs  CHANGES.md  COPYING.HEADER  NOTICE.md  README.md  dune-project  file-rewriter-dev.opam  file-rewriter-tests.opam  file-rewriter.opam  file-rewriter.opam.template  headache.sh  sexps-rewriter.opam  sexps-rewriter.opam.template
.github/workflows/: crs.yml  dune-pkg-more-ci.yml  more-ci.yml
lib/file_rewriter/src/: dune  file_rewriter.ml  file_rewriter.mli
lib/file_rewriter/test/: dune  test__file_rewriter.ml  test__file_rewriter.mli
lib/sexps_rewriter/src/: dune  sexps_rewriter.ml
lib/sexps_rewriter/test/: dune  test__sexps_rewriter.ml
pkg/file-rewriter/: dune  file_rewriter.mli
pkg/sexps-rewriter/: dune
src/file-rewriter/: dune  file_rewriter.ml  file_rewriter.mli
src/myers/: dune
src/sexps-rewriter/: sexps_rewriter.ml  sexps_rewriter.mli
src/stdlib/: code_error0.ml  code_error0.mli  dune  dyn0.ml  dyn0.mli  err0.ml  err0.mli  list0.ml  list0.mli  myers0.ml  myers0.mli  ordering0.ml  ordering0.mli  pp0.ml  pp0.mli  stdlib0.ml  stdlib0.mli  stdlib_for_test.ml  stdlib_for_test.mli  string0.ml  string0.mli  with_equal_and_dyn0.ml  with_equal_and_dyn0.mli
test/file-rewriter/: dune  test__file_rewriter.ml  test__stdlib.ml
test/myers/: dune
test/sexps-rewriter/: dune  test__sexps_rewriter.ml  test__sexps_rewriter.mli
test/stdlib/: code_error.ml  dune  dyn0.ml  stdlib_for_test.ml  stdlib_for_test.mli  string0.mli  test__stdlib.ml  test__stdlib.mli
