(library
 (name sexps_rewriter_test)
 (package file-rewriter-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_err
  -open
  Stdlib_for_test)
 (libraries
  file-rewriter
  fpath
  parsexp
  patdiff.expect_test_patdiff
  pp
  pplumbing-err
  sexps_rewriter
  stdlib_for_test
  unix)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
