(library
 (name sexps_rewriter)
 (public_name sexps-rewriter)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Sexplib0)
 (libraries file_rewriter fpath loc parsexp sexplib0)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_sexp_conv ppx_sexp_value)))
